--- a/Assignments/Assignment 3/190997.ipynb
+++ b/Assignments/Assignment 3/190997.ipynb
@@ -240,6 +240,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is no missing data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "variance    float64\n",
+       "skewness    float64\n",
+       "curtosis    float64\n",
+       "entropy     float64\n",
+       "class         int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking the data types of the columns\n",
+    "data.dtypes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -397,6 +430,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variance</th>\n",
+       "      <th>skewness</th>\n",
+       "      <th>curtosis</th>\n",
+       "      <th>entropy</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.121397</td>\n",
+       "      <td>1.149036</td>\n",
+       "      <td>-0.975614</td>\n",
+       "      <td>0.354432</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.446538</td>\n",
+       "      <td>1.064065</td>\n",
+       "      <td>-0.894710</td>\n",
+       "      <td>-0.128721</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.207369</td>\n",
+       "      <td>-0.777069</td>\n",
+       "      <td>0.122174</td>\n",
+       "      <td>0.617848</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.063355</td>\n",
+       "      <td>1.295005</td>\n",
+       "      <td>-1.254940</td>\n",
+       "      <td>-1.143612</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.036758</td>\n",
+       "      <td>-1.086642</td>\n",
+       "      <td>0.736462</td>\n",
+       "      <td>0.096552</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1367</th>\n",
+       "      <td>-0.009707</td>\n",
+       "      <td>-0.097657</td>\n",
+       "      <td>-0.660721</td>\n",
+       "      <td>0.300887</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1368</th>\n",
+       "      <td>-0.641079</td>\n",
+       "      <td>-1.158562</td>\n",
+       "      <td>1.178593</td>\n",
+       "      <td>0.729861</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1369</th>\n",
+       "      <td>-1.471820</td>\n",
+       "      <td>-2.620690</td>\n",
+       "      <td>3.757647</td>\n",
+       "      <td>-0.754609</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1370</th>\n",
+       "      <td>-1.406180</td>\n",
+       "      <td>-1.755831</td>\n",
+       "      <td>2.551113</td>\n",
+       "      <td>-0.043143</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1371</th>\n",
+       "      <td>-1.046741</td>\n",
+       "      <td>-0.439661</td>\n",
+       "      <td>0.298507</td>\n",
+       "      <td>1.136050</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1372 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      variance  skewness  curtosis   entropy  class\n",
+       "0     1.121397  1.149036 -0.975614  0.354432     -1\n",
+       "1     1.446538  1.064065 -0.894710 -0.128721     -1\n",
+       "2     1.207369 -0.777069  0.122174  0.617848     -1\n",
+       "3     1.063355  1.295005 -1.254940 -1.143612     -1\n",
+       "4    -0.036758 -1.086642  0.736462  0.096552     -1\n",
+       "...        ...       ...       ...       ...    ...\n",
+       "1367 -0.009707 -0.097657 -0.660721  0.300887      1\n",
+       "1368 -0.641079 -1.158562  1.178593  0.729861      1\n",
+       "1369 -1.471820 -2.620690  3.757647 -0.754609      1\n",
+       "1370 -1.406180 -1.755831  2.551113 -0.043143      1\n",
+       "1371 -1.046741 -0.439661  0.298507  1.136050      1\n",
+       "\n",
+       "[1372 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# standardizing the features except the target variable\n",
+    "for col in cols[:-1]:\n",
+    "    data[col] = (data[col] - data[col].mean()) / data[col].std()\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -419,6 +608,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the perceptron algorithm\n",
     "def perceptron_algo(X, y, thresh, max_iter=10000):\n",
     "    w = np.array([0.5, 0.5, 0.5, 0.5])\n",
     "    eta = 1\n",
@@ -449,6 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# makes predictions using the given w\n",
     "def predict(w, X):\n",
     "    y = np.zeros(len(X))\n",
     "    for i in range(len(X)):\n",
@@ -462,8 +653,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# calculates the accuracy using the predicted and actual values\n",
     "def accuracy(y_pred, y_actual):\n",
     "    return (y_pred == y_actual).sum() / len(y_actual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove outliers"
    ]
   },
   {
@@ -642,10 +843,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# performing train-test split with 10% of the data as the test data\n",
-    "train_size = int(0.9 * len(data))\n",
+    "# performing train-test split with 20% of the data as the test data\n",
+    "train_size = int(0.8 * len(data))\n",
     "data_train = data_shuffle[:train_size].reset_index(drop=True)\n",
     "data_test = data_shuffle[train_size:].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change cross-val method"
    ]
   },
   {
@@ -654,13 +864,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# splits the dataset for cross-validation\n",
     "def data_split(data):\n",
     "    data_shuffle = data.sample(frac=1)\n",
     "    data_shuffle\n",
-    "    train_size = int(0.9 * len(data))\n",
+    "    train_size = int(0.8 * len(data))\n",
     "    data_train = data_shuffle[:train_size].reset_index(drop=True)\n",
     "    data_val = data_shuffle[train_size:].reset_index(drop=True)\n",
     "    return data_train, data_val"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's perform the cross-validation and tune the hyperparameter `thresh` which is the number of no-mistake iterations after which we can say that the algorithm has converged. "
    ]
   },
   {
@@ -677,7 +895,6 @@
     }
    ],
    "source": [
-    "# cross-validation\n",
     "accuracy_dict = {}\n",
     "for k in range(5):\n",
     "    data_train_crossval, data_val = data_split(data_train)\n",
@@ -711,6 +928,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's run the perceptron algorithm on the test set using the optimal threshold we got from cross-validation. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -732,6 +956,13 @@
     "y_pred = predict(w, X_test)\n",
     "acc = accuracy(y_pred, y_test)\n",
     "print('The test set accuracy is', acc, 'using a threshold of', best_thresh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's find the F1 score."
    ]
   },
   {
@@ -840,6 +1071,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's create the functions to calculate the normal, likelihood and posterior. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -904,6 +1142,13 @@
     "    sigma1 = np.sqrt(sigma1_sq)\n",
     "\n",
     "    return normal(mu, mu1, sigma1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's plot the prior, likelihood and posterior on the same graph. "
    ]
   },
   {
@@ -983,17 +1228,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Metropolis-Hastings algorithm which runs for `num_iter` iterations:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def metropolis_hastings(prior, likelihood, y, mu0=0, sigma0=1, sigma=1):\n",
+    "def metropolis_hastings(prior, likelihood, y, mu0=0, sigma0=1, sigma=1, num_iter=1000, proposal_width=1):\n",
     "    hist = [0.0]\n",
-    "    sd = 1\n",
     "    mu_last = 0.0\n",
-    "    for i in range(1000):\n",
-    "        mu_curr = np.random.normal(mu_last, sd)\n",
+    "    for i in range(num_iter):\n",
+    "        mu_curr = np.random.normal(mu_last, proposal_width)\n",
     "        r = (prior(mu_curr, mu0, sigma0) * likelihood(mu_curr, y, sigma)) / (prior(mu_last, mu0, sigma0) * likelihood(mu_last, y, sigma))\n",
     "        a = np.random.uniform(0, 1)\n",
     "        if r <= a:\n",
@@ -1001,6 +1252,13 @@
     "        hist.append(mu_curr)\n",
     "        mu_last = mu_curr\n",
     "    return hist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's plot the histogram we get from the Metropolis-Hastings algorithm and the posterior we calculated before to see if the Metropolis-Hastings algorithm is able to estimate the posterior distribution. "
    ]
   },
   {
@@ -1038,8 +1296,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As we can see, the histogram is able to estimate the posterior distribution fairly well when we took the proposal width to be 1. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Q2. (c)\n",
     "How does the speed of convergence of the sampling depend on the proposal width? Is there an optimal proposal width that would work best? Demonstrate the consequences of using sub-optimal proposal width and terminating sampling too soon."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we will introduce `thresh` and `max_iter` in the Metropolis-Hastings algorithm to see for which proposal width the algorithm converges the fastest (takes the least number of iterations to converge). "
    ]
   },
   {
@@ -1068,6 +1340,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's find out the optimal width using the new Metropolis-Hastings algorithm. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -1089,6 +1368,13 @@
     "        min_t = t\n",
     "        optimal_width = width\n",
     "print('Optimal width is', optimal_width, 'which takes', min_t, 'iterations to converge.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's plot the histogram using the optimal width to see if the algorithm is able to estimate the posterior distribution properly. "
    ]
   },
   {
@@ -1127,11 +1413,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, using a proposal width of 35, the algorithm takes the least number of iterations to converge. But the histogram does not represent the posterior properly, as there are too little samples to create the histogram. \n",
+    "As we can see, using a proposal width of 35, the algorithm takes the least number of iterations to converge. But the histogram is not able to estimate the posterior distribution properly, as there are too little samples to create the histogram. \n",
     "\n",
-    "On the other hand, using a sub-optimal proposal width, although takes more time to converge, but it has a lot of samples and hence creates a much better histogram which represents the posterior better as compared to when we use the optimal proposal width. \n",
+    "On the other hand, using a sub-optimal proposal width, although takes more time to converge, but gives a lot of samples and hence creates a much better histogram which is able to estimate the posterior distribution properly as we say before. \n",
     "\n",
-    "So, there is a tradeoff between the speed of convergence and the accuracy of the histogram. "
+    "So, there is a tradeoff between the speed of convergence and the accuracy of the histogram in estimation of the posterior distribution. "
    ]
   }
  ],
