Complete assignment final

--- a/Assignments/Assignment 3/190997.ipynb
+++ b/Assignments/Assignment 3/190997.ipynb
@@ -1079,14 +1079,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The cross-validated accuracy is 0.9715686274509803 using a threshold of 300\n"
+      "The cross-validated accuracy is 0.9676470588235295 using a threshold of 150\n"
      ]
     }
    ],
@@ -1098,7 +1098,7 @@
     "    val_idx = list(range(i * fold_size, (i + 1) * fold_size))\n",
     "    train_idx = list(range(0, len(data_train)))\n",
     "    idx = list(set(train_idx) - set(val_idx))\n",
-    "    data_train_crossval = data_train.loc[train_idx, :].reset_index(drop=True)\n",
+    "    data_train_crossval = data_train.loc[idx, :].reset_index(drop=True)\n",
     "    data_val = data_train.loc[val_idx, :].reset_index(drop=True)\n",
     "    X_train = data_train_crossval.drop('class', axis=1)\n",
     "    y_train = data_train_crossval['class']\n",
@@ -1139,14 +1139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The test set accuracy is 0.984375 using a threshold of 300\n"
+      "The test set accuracy is 0.98828125 using a threshold of 150\n"
      ]
     }
    ],
@@ -1170,14 +1170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score on the test set is 0.9814814814814815 using a threshold of 300\n"
+      "F1 score on the test set is 0.986046511627907 using a threshold of 150\n"
      ]
     }
    ],
