--- a/Assignments/Assignment 4/assignment-4.ipynb
+++ b/Assignments/Assignment 4/assignment-4.ipynb
@@ -327,6 +327,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see elbow around k=5."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 143,
    "metadata": {},
@@ -374,6 +381,13 @@
     "\n",
     "def kernel_dist_sq(x, z, gamma=1):\n",
     "    return gaussian_kernel(x, x, gamma) + gaussian_kernel(z, z, gamma) - 2 * gaussian_kernel(x, z, gamma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kernelized k-means++:"
    ]
   },
   {
@@ -436,13 +450,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kernelized k-means:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###\n",
-    "\n",
     "def kmeans_kernel(X, K=4, max_iter=100000):\n",
     "    N = X.shape[0]\n",
     "    dim = X.shape[1]\n",
@@ -493,8 +512,6 @@
     }
    ],
    "source": [
-    "###\n",
-    "\n",
     "K = 5\n",
     "z, mu = kmeans_kernel(X, K)\n",
     "for k in range(K):\n",
@@ -591,8 +608,6 @@
     }
    ],
    "source": [
-    "###\n",
-    "\n",
     "losses = []\n",
     "for k in range(1, 15):\n",
     "    z, mu = kmeans_plusplus_kernel(X, k)\n",
